tests/dataset/tpc-ds/compiler/c/q16.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct CatalogSale CatalogSale;
typedef struct DateDim DateDim;
typedef struct CustomerAddress CustomerAddress;
typedef struct CallCenter CallCenter;
typedef struct CatalogReturn CatalogReturn;

typedef struct {
  int order_count;
  double total_shipping_cost;
  double total_net_profit;
} tmp7_t;
typedef struct {
  int len;
  tmp7_t *data;
} tmp7_list_t;
tmp7_list_t create_tmp7_list(int len) {
  tmp7_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp7_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cs_order_number;
  int cs_ship_date_sk;
  int cs_ship_addr_sk;
  int cs_call_center_sk;
  int cs_warehouse_sk;
  double cs_ext_ship_cost;
  double cs_net_profit;
} catalog_sale_t;

typedef struct {
  int d_date_sk;
  const char *d_date;
} date_dim_t;

typedef struct {
  int ca_address_sk;
  const char *ca_state;
} customer_addres_t;
typedef struct {
  int len;
  customer_addres_t *data;
} customer_addres_list_t;
customer_addres_list_t create_customer_addres_list(int len) {
  customer_addres_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_addres_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cc_call_center_sk;
  const char *cc_county;
} call_center_t;

typedef struct {
  int order_count;
  double total_shipping_cost;
  double total_net_profit;
} filtered_item_t;
typedef struct {
  int len;
  filtered_item_t *data;
} filtered_item_list_t;
filtered_item_list_t create_filtered_item_list(int len) {
  filtered_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(filtered_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CatalogSale {
  int cs_order_number;
  int cs_ship_date_sk;
  int cs_ship_addr_sk;
  int cs_call_center_sk;
  int cs_warehouse_sk;
  double cs_ext_ship_cost;
  double cs_net_profit;
} CatalogSale;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct DateDim {
  int d_date_sk;
  char *d_date;
} DateDim;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CustomerAddress {
  int ca_address_sk;
  char *ca_state;
} CustomerAddress;
typedef struct {
  int len;
  customer_address_t *data;
} customer_address_list_t;
customer_address_list_t create_customer_address_list(int len) {
  customer_address_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_address_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CallCenter {
  int cc_call_center_sk;
  char *cc_county;
} CallCenter;
typedef struct {
  int len;
  call_center_t *data;
} call_center_list_t;
call_center_list_t create_call_center_list(int len) {
  call_center_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(call_center_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CatalogReturn {
  int cr_order_number;
} CatalogReturn;
typedef struct {
  int len;
  catalog_return_t *data;
} catalog_return_list_t;
catalog_return_list_t create_catalog_return_list(int len) {
  catalog_return_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_return_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

list_int distinct(list_int xs) {
  list_int out = list_int_create(0);
  for (int tmp1 = 0; tmp1 < xs.len; tmp1++) {
    int x = xs.data[tmp1];
    list_int tmp2 = list_int_create(0);
    if (((!contains(tmp2, x)))) {
      list_int tmp3 = list_int_create(0);
      int tmp4_data[1];
      list_int tmp4 = {1, tmp4_data};
      tmp4.data[0] = x;
      list_int tmp5 = concat_list_int(tmp3, tmp4);
      out = tmp5;
    }
  }
  list_int tmp6 = list_int_create(0);
  return tmp6;
}

static list_int test_TPCDS_Q16_shipping_filtered;
static void test_TPCDS_Q16_shipping() {
  tmp7_t tmp7[] = {(tmp7_t){
      .order_count = 1, .total_shipping_cost = 5.0, .total_net_profit = 20.0}};
  int tmp7_len = sizeof(tmp7) / sizeof(tmp7[0]);
  int tmp8 = 1;
  if (test_TPCDS_Q16_shipping_filtered.len != tmp7.len) {
    tmp8 = 0;
  } else {
    for (int i9 = 0; i9 < test_TPCDS_Q16_shipping_filtered.len; i9++) {
      if (test_TPCDS_Q16_shipping_filtered.data[i9] != tmp7.data[i9]) {
        tmp8 = 0;
        break;
      }
    }
  }
  if (!(tmp8)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  catalog_sale_t catalog_sales[] = {(catalog_sale_t){.cs_order_number = 1,
                                                     .cs_ship_date_sk = 1,
                                                     .cs_ship_addr_sk = 1,
                                                     .cs_call_center_sk = 1,
                                                     .cs_warehouse_sk = 1,
                                                     .cs_ext_ship_cost = 5.0,
                                                     .cs_net_profit = 20.0},
                                    (catalog_sale_t){.cs_order_number = 1,
                                                     .cs_ship_date_sk = 1,
                                                     .cs_ship_addr_sk = 1,
                                                     .cs_call_center_sk = 1,
                                                     .cs_warehouse_sk = 2,
                                                     .cs_ext_ship_cost = 0.0,
                                                     .cs_net_profit = 0.0}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_date = "2000-03-01"}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  customer_addres_t customer_address[] = {
      (customer_addres_t){.ca_address_sk = 1, .ca_state = "CA"}};
  int customer_address_len =
      sizeof(customer_address) / sizeof(customer_address[0]);
  call_center_t call_center[] = {
      (call_center_t){.cc_call_center_sk = 1, .cc_county = "CountyA"}};
  int call_center_len = sizeof(call_center) / sizeof(call_center[0]);
  list_int catalog_returns = list_int_create(0);
  filtered_item_list_t filtered = (filtered_item_list_t){0, NULL};
  printf("[");
  for (int i10 = 0; i10 < filtered.len; i10++) {
    if (i10 > 0)
      printf(",");
    filtered_item_t it = filtered.data[i10];
    printf("{");
    _json_string("order_count");
    printf(":");
    _json_int(it.order_count);
    printf(",");
    _json_string("total_shipping_cost");
    printf(":");
    _json_float(it.total_shipping_cost);
    printf(",");
    _json_string("total_net_profit");
    printf(":");
    _json_float(it.total_net_profit);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q16_shipping_filtered = filtered;
  test_TPCDS_Q16_shipping();
  return 0;
}
